Prevent aggregation titles from wrapping

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -213,6 +213,10 @@ form {
 	background-image: none;
 }
 
+.pivot-grid .agg-title {
+	white-space: nowrap;
+}
+
 .pivot-grid .agg-cell, .pivot-grid .agg-title {
 	text-align: right;
 }
